@@ -15,6 +15,7 @@
 			<script type="text/javascript">
 			/*<![CDATA[*/
 				self.close();
+				window.opener.location.reload(true);
 			/*]]>*/
 			</script>
 </head>
